src/test/pass/basic_self_usage.ly
var a: list[any] = []

class Point(x: integer, y: integer) {
    a.append(self)
    var @x = x
    var @y = y
}

Point::new(1, 2)
